update from formulary to plan-net

--- a/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
+++ b/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
@@ -3,8 +3,8 @@
 	<div th:fragment="banner" class="well">
     <p>
       This server provides a reference implementation for
-      the <a href="http://build.fhir.org/ig/HL7/davinci-pdex-formulary/index.html">
-      Da Vinci US Drug Formulary Implementation Guide</a>.
+      the <a href="https://build.fhir.org/ig/HL7/davinci-pdex-plan-net/index.html">
+      Da Vinci Payer Data exchange Plan Network Implementation Guide</a>.
     </p>
 	</div>
 </html>
