--- a/src/main/webapp/WEB-INF/templates/about.html
+++ b/src/main/webapp/WEB-INF/templates/about.html
@@ -21,14 +21,14 @@
                         <h3 class="panel-title">About This Server</h3>
                     </div>
                     <div class="panel-body">
-                        <p>
-                          This server provides a reference implementation for
-                          the <a href="http://build.fhir.org/ig/HL7/davinci-pdex-formulary/index.html">
-                          Da Vinci US Drug Formulary Implementation Guide</a>.
-                        </p>
-                        <p>
+                      <p>
+                        This server provides a reference implementation for
+                        the <a href="https://build.fhir.org/ig/HL7/davinci-pdex-plan-net/index.html">
+                        Da Vinci Payer Data exchange Plan Network Implementation Guide</a>.
+                      </p>
+                      <p>
 
-                        </p>
+                      </p>
                     </div>
                 </div>
             </div>
